endpoints/gke/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: esp-deployment
  labels:
    type: endpoints-app
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: esp-app
    spec:
      containers:
      - name: esp
        image: gcr.io/endpoints-release/endpoints-runtime:1
        args: [
          "--http_port", "8080",
          "--backend", "127.0.0.1:50051",
          "--service", "$(JWT_AUDIENCE)",
          "--rollout_strategy", "managed",
        ]
        livenessProbe:
          httpGet:
            path: /swagger.json
            port: 8080
            scheme: HTTP
        readinessProbe:
          httpGet:
            path: /swagger.json
            scheme: HTTP
            port: 8080                   
        ports:
          - containerPort: 8080
      - name: myapp
        image: gcr.io/YOUR_PROJECT/myapp
        imagePullPolicy: Always
        ports:
          - containerPort: 50051
