endpoints/gke/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: esp-srv
  labels:
    type: esp-srv
spec:
  type: NodePort 
  #type: LoadBalancer   
  ports:
  - port: 80
    protocol: TCP
    name: http
    targetPort: 8080     
  selector:
    app: esp-app
